--- a/labsAssignments.html
+++ b/labsAssignments.html
@@ -6,14 +6,34 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div>
+        <img src= "my_picture.jpg" alt="my_picture" width=200 height=250 >
+
+    </div>
     <h2>Ivan Asiimwe Agaba</h2>
 
-    <ul> <li> Lab 1</li>
-         <li>Lab 2 </li>
-          <li>Lab 3</li>
-          <li>Lab 4</li>
-          <li>Lab 5</li>
-          <li>Lab 6</li>
+    <div>
+
+    <ul>
+        <li>Lab 0 : This HomePage </li>
+         <li> <a href="#" >Lab 1 : About Me</a></li>
+         <li> <a href="#" > Homework 1 : Grandma's Lemon Meringue Pie</a></li>
+         <li> <a href="#" > Homework 2 : Movie Review</a></li>
+         <li> <a href="#" >Lab 3 : My Music Page</a></li>
+         <li> <a href="#" >Homework 3 : Movie Review PHP</a></li>
+         <li> <a href="#" >Homework 4 : NerdLuv</a></li>
+         <li> <a href="#" >Homework 5 : NerdLuv DB</a></li>
+         <li> <a href="#" >Homework 6 : NerdLuv Session</a></li>
+         <li> <a href="#" >Final Project</a></li>
+
+        </div>
+         <div>
+            <a href="#" ><img src= "htmlchecker.png" alt="htmlchecker" width=100 height=30 ></a>
+
+        </div>
+
+        
          </ul>
  
     
