--- a/aboutme.html
+++ b/aboutme.html
@@ -49,6 +49,11 @@
         <li> Suzan : She is a funny person</li>        
     </ul>
 </div>
+<div>
+    <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fagabaivan.github.io%2Fwap2023November%2F" >
+        <img src= "css_checker.png" alt="validator" width=100 height=30 ></a>
+
+</div>
 
 
     
