--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <ul>
         <li>Lab 0 : This HomePage </li>
-         <li> <a href="#" > Lab 1 : About Me</a></li>
+         <li> <a href="aboutme.html" > Lab 1 : About Me</a></li>
          <li> <a href="#" > Homework 1 : Grandma's Lemon Meringue Pie</a></li>
          <li> <a href="#" > Homework 2 : Movie Review</a></li>
          <li> <a href="#" > Lab 3 : My Music Page</a></li>
@@ -27,7 +27,7 @@
          <li> <a href="#" > Homework 6 : NerdLuv Session</a></li>
          <li> <a href="#" > Final Project</a></li>
         </ul>
-        
+
 
         </div>
     
