--- a/aboutme.html
+++ b/aboutme.html
@@ -52,6 +52,8 @@
 <div>
     <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fagabaivan.github.io%2Fwap2023November%2F" >
         <img src= "css_checker.png" alt="validator" width=100 height=30 ></a>
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fagabaivan.github.io%2Fwap2023November%2F" >
+            <img src= "HTML-checker2.png" alt="validator" width=100 height=30 ></a>
 
 </div>
 
