--- a/aboutme.html
+++ b/aboutme.html
@@ -31,11 +31,19 @@
     </h3>
     <p id="sidenote"> (I actually watch many movies but let me list a few)</p>
     <ol>
-        <li>Inception(<a href="https://www.imdb.com/title/tt1375666/?ref_=nv_sr_srsg_0_tt_3_nm_5_q_ince"> IMBD </a>)</li>
+        <li>Inception
+            <ul class="notag">
+                <li>Director<ul class="notag"><li>Christopher Nolan</li></ul></li>
+                <li>Genre <ul class="notag"><li>Thriller, Horror, Action</li></ul></li>
+                <li>Plot Outline<ul class="notag"><li>A thief who steals corporate secrets through the use of dream-sharing technology...
+                    (<a href="https://www.imdb.com/title/tt1375666/?ref_=nv_sr_srsg_0_tt_3_nm_5_q_ince">more</a>)</li></ul></li>
+                
+                </ul>
         <li>The Dark Knight Rises(<a href="https://www.imdb.com/title/tt1345836/?ref_=nv_sr_srsg_0_tt_8_nm_0_q_the%2520dark%2520knight%2520rises"> IMBD </a>)</li>
         <li>A star is born(<a href="https://www.imdb.com/title/tt1517451/?ref_=nv_sr_srsg_0_tt_8_nm_0_q_a%2520star%2520is%2520born"> IMBD </a>)</li>
         <li>Entergalatic(<a href="https://www.imdb.com/title/tt10687116/?ref_=fn_al_tt_1"> IMBD </a>)</li>
     </ol>
+        
 </div>
 
 <div>
@@ -55,7 +63,7 @@
 <div>
     <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fagabaivan.github.io%2Fwap2023November%2F" >
         <img src= "css_checker.png" alt="validator" width=100 height=30 ></a>
-        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fagabaivan.github.io%2Fwap2023November%2F" >
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fagabaivan.github.io%2Fwap2023November%2Faboutme.html" >
             <img src= "HTML-checker2.png" alt="validator" width=100 height=30 ></a>
 
 </div>
