--- a/aboutme.html
+++ b/aboutme.html
@@ -75,7 +75,7 @@
     </ul>
 </div>
 <div>
-    <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fagabaivan.github.io%2Fwap2023November%2F" >
+    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fagabaivan.github.io%2Fwap2023November%2Fstyleme.css&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en" >
         <img src= "css_checker.png" alt="validator" width=100 height=30 ></a>
         <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fagabaivan.github.io%2Fwap2023November%2Faboutme.html" >
             <img src= "HTML-checker2.png" alt="validator" width=100 height=30 ></a>
