--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <ul>
         <li>Lab 0 : This HomePage </li>
          <li> <a href="aboutme.html" > Lab 1 : About Me</a></li>
-         <li> <a href="#" > Homework 1 : Grandma's Lemon Meringue Pie</a></li>
+         <li> <a href="lab3_1.html" > Lab 3 work</a></li>
          <li> <a href="#" > Homework 2 : Movie Review</a></li>
          <li> <a href="#" > Lab 3 : My Music Page</a></li>
          <li> <a href="#" > Homework 3 : Movie Review PHP</a></li>
