--- a/lab4/lab4_1.html
+++ b/lab4/lab4_1.html
@@ -87,10 +87,10 @@
             <form action="#">
                 <table>
                     <tr>
-                        <td>Meal Preference :</td><select class="selections" name="meals">
+                        <td>Meal Preference :</td><td><select name="meals">
                             <option selected>Vegetarian</option>
                             <option>Insectivorous</option>
-                            <option>Meat eating</option>
+                            <option>Meat-eating</option>
                         </select></td>
                     </tr>
                     <tr>
