--- a/lab4/lab4_1.html
+++ b/lab4/lab4_1.html
@@ -133,6 +133,13 @@
         <input class="button" type="submit" />
         <input class="button" type="reset" />
     </div>
+    <div>
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fagabaivan.github.io%2Fwap2023November%2Flab4%2Flab4_1.css&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en" >
+            <img src= "css_checker.png" alt="validator" width=80 height=50 ></a>
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fagabaivan.github.io%2Fwap2023November%2Flab4%2Flab4_1.html" >
+                <img src= "HTML-checker2.png" alt="validator" width=80 height=50 ></a>
+    
+    </div>
 
 
 
